--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-scroll": "^1.8.2",
     "react-typed": "^1.2.0",
     "react-typist": "^2.0.5",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "start": "react-scripts start",
