--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "aos": "^2.3.4",
+    "emailjs-com": "^3.2.0",
     "gh-pages": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -15,8 +16,10 @@
     "react-modal": "^3.13.1",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
+    "react-slideshow-image": "^3.6.1",
     "react-typed": "^1.2.0",
     "react-typist": "^2.0.5",
+    "react-vertical-timeline-component": "^3.5.2",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.10"
   },
